--- a/codeforces/.vscode/settings.json
+++ b/codeforces/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "competitive-programming-helper.firstTime": false
+    "competitive-programming-helper.firstTime": false,
+    "files.associations": {
+        "utility": "cpp",
+        "algorithm": "cpp",
+        "limits": "cpp"
+    }
 }
