--- a/codeforces/.vscode/settings.json
+++ b/codeforces/.vscode/settings.json
@@ -3,6 +3,7 @@
     "files.associations": {
         "utility": "cpp",
         "algorithm": "cpp",
-        "limits": "cpp"
+        "limits": "cpp",
+        "iostream": "cpp"
     }
 }
